[gd_scene load_steps=37 format=4 uid="uid://6fbm3euyryor"]

[ext_resource type="Script" uid="uid://bn6dby6jckn38" path="res://script/start_game.gd" id="1_tq2sd"]
[ext_resource type="PackedScene" uid="uid://b83hwoltxpxrq" path="res://scenes/fade_transition.tscn" id="2_2aiwh"]
[ext_resource type="Texture2D" uid="uid://btag5ibrbxjlt" path="res://assets/sprites/back-back.png" id="2_fr1gt"]
[ext_resource type="Texture2D" uid="uid://b34wyurbkncap" path="res://assets/sprites/house.png" id="2_wcjs8"]
[ext_resource type="Texture2D" uid="uid://luq5s3b5w57x" path="res://assets/sprites/back-mid.png" id="3_e8p0f"]
[ext_resource type="Script" uid="uid://3inedt7vwkw7" path="res://script/camera_2d.gd" id="4_mc8qq"]
[ext_resource type="Texture2D" uid="uid://c41jkf66ip1it" path="res://assets/sprites/ground.png" id="4_qr1nj"]
[ext_resource type="Texture2D" uid="uid://6upifskq0adc" path="res://assets/sprites/back-front.png" id="4_vpf27"]
[ext_resource type="Texture2D" uid="uid://dw1ip82cb2pkl" path="res://assets/sprites/househover.png" id="4_ya1w5"]
[ext_resource type="Texture2D" uid="uid://bmn7vxop3j4q8" path="res://assets/sprites/bLUEhOUSE.png" id="5_4ty0x"]
[ext_resource type="Texture2D" uid="uid://bheejfcror6km" path="res://assets/sprites/sprites/paka's petting sim/ground.png" id="6_e8p0f"]
[ext_resource type="Texture2D" uid="uid://dgrmdreumpiua" path="res://assets/sprites/bLUEhOUSEhover.png" id="6_oyaqm"]
[ext_resource type="Texture2D" uid="uid://cp54h45cu4pv4" path="res://assets/sprites/YellowHouse.png" id="7_oyaqm"]
[ext_resource type="Texture2D" uid="uid://4su6quuiimuv" path="res://assets/sprites/YellowHouseHover.png" id="8_g0qae"]
[ext_resource type="Texture2D" uid="uid://bqn6v8atowo4e" path="res://assets/sprites/sprites/BUTTONS/bLUEhOUSELocked.png" id="11_4ytee"]
[ext_resource type="Texture2D" uid="uid://bv1janvtar5x3" path="res://assets/sprites/sprites/BUTTONS/lock.png" id="12_jit1l"]
[ext_resource type="Texture2D" uid="uid://b5gkwxq61iour" path="res://assets/sprites/sprites/BUTTONS/YellowHouseLocked.png" id="13_vpf27"]
[ext_resource type="Texture2D" uid="uid://dl8fs7d20bvl" path="res://assets/sprites/sprites/BUTTONS/Go_Back.png" id="18_7wif6"]
[ext_resource type="Texture2D" uid="uid://boqv7aiafy7od" path="res://assets/sprites/sprites/BUTTONS/Go_Back_hover.png" id="19_pfjci"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wcjs8"]
texture = ExtResource("4_qr1nj")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/next_alternative_id = 2
3:1/0 = 0
3:1/1 = 1
3:1/1/z_index = 6
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/next_alternative_id = 2
3:2/0 = 0
3:2/1 = 1
3:2/1/z_index = 6
4:2/0 = 0
5:2/0 = 0
0:3/next_alternative_id = 2
0:3/0 = 0
0:3/1 = 1
0:3/1/z_index = 6
1:3/0 = 0
2:3/0 = 0
3:3/next_alternative_id = 2
3:3/0 = 0
3:3/1 = 1
3:3/1/z_index = 6
5:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vpf27"]
texture = ExtResource("6_e8p0f")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0

[sub_resource type="TileSet" id="TileSet_qr1nj"]
sources/0 = SubResource("TileSetAtlasSource_wcjs8")
sources/1 = SubResource("TileSetAtlasSource_vpf27")

[sub_resource type="Gradient" id="Gradient_wcjs8"]
offsets = PackedFloat32Array(0, 0.6933333)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qr1nj"]
gradient = SubResource("Gradient_wcjs8")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_pfjci"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("LockIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("LockIcon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_7wif6"]
resource_name = "locking"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LockIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.19833814, 0.26666668, 0.33333334, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(77, 48), Vector2(78, 48), Vector2(76, 48), Vector2(77, 48), Vector2(78, 48), Vector2(76, 48), Vector2(77, 48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LockIcon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.19833814, 0.26666668, 0.33333334, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.06981317, 0.06981317, 0.0, -0.06981317, 0.06981317, 0.0]
}

[sub_resource type="Animation" id="Animation_4w658"]
resource_name = "unlock"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LockIcon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.24608275, 0.50241894),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(77, 48), Vector2(92, 43.000004), Vector2(103, 60)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LockIcon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.50241894),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5707964]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i1nck"]
_data = {
&"RESET": SubResource("Animation_pfjci"),
&"locking": SubResource("Animation_7wif6"),
&"unlock": SubResource("Animation_4w658")
}

[sub_resource type="Gradient" id="Gradient_oyaqm"]
offsets = PackedFloat32Array(0, 0.6533333)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g0qae"]
gradient = SubResource("Gradient_oyaqm")
fill = 1
fill_from = Vector2(0.5046729, 0.5)
fill_to = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_i1nck"]
resource_name = "locking"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2007967, 0.26666668, 0.33333334, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(41, 58), Vector2(43, 58), Vector2(39, 58), Vector2(41, 58), Vector2(43, 58), Vector2(39, 58), Vector2(41, 58)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334, 0.2007967, 0.26666668, 0.33333334, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.06981317, 0.06981317, 0.0, -0.06981317, 0.06981317, 0.0]
}

[sub_resource type="Animation" id="Animation_8ypdy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(41, 58)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0d1lr"]
resource_name = "unlock"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.24950057, 0.5015645),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(41, 58), Vector2(58, 57.000008), Vector2(63, 74)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5707964]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4w658"]
_data = {
&"RESET": SubResource("Animation_8ypdy"),
&"locking": SubResource("Animation_i1nck"),
&"unlock": SubResource("Animation_0d1lr")
}

[sub_resource type="Gradient" id="Gradient_gyxdi"]
offsets = PackedFloat32Array(0, 0.7)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fr1gt"]
gradient = SubResource("Gradient_gyxdi")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="StartGame" type="Node2D"]
script = ExtResource("1_tq2sd")

[node name="background" type="Node2D" parent="."]

[node name="back" type="Parallax2D" parent="background"]
scroll_scale = Vector2(0.2, 0.2)
scroll_offset = Vector2(-315, -43)
repeat_size = Vector2(291, 125)
repeat_times = 10

[node name="Sprite2D" type="Sprite2D" parent="background/back"]
position = Vector2(2, -17)
scale = Vector2(1.1367188, 1.5875)
texture = ExtResource("2_fr1gt")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 256, 80)

[node name="mid" type="Parallax2D" parent="background"]
scroll_scale = Vector2(0.4, 0.4)
scroll_offset = Vector2(-119, -44)
repeat_size = Vector2(291, 125)
repeat_times = 10

[node name="Sprite2D" type="Sprite2D" parent="background/mid"]
position = Vector2(-8, 50)
scale = Vector2(1.1367188, 1.4)
texture = ExtResource("3_e8p0f")
centered = false

[node name="front" type="Parallax2D" parent="background"]
texture_repeat = 2
scroll_scale = Vector2(0.6, 0.6)
repeat_size = Vector2(256, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="background/front"]
position = Vector2(337, 71)
scale = Vector2(1.0820313, 1.3375)
texture = ExtResource("4_vpf27")
centered = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_qr1nj")
format = 2

[node name="Layer1" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AADo/wMAAAAAAAAAAADp/wMAAAAAAAAAAADq/wMAAAAAAAAAAADr/wMAAAAAAAAAAADs/wMAAAAAAAAAAADt/wMAAAAAAAAAAADu/wMAAAAAAAAAAADv/wMAAAAAAAAAAADw/wMAAAAAAAAAAADx/wMAAAAAAAAAAADy/wMAAAAAAAAAAADz/wMAAAAAAAAAAAD0/wMAAAAAAAAAAAD1/wMAAAAAAAAAAAD2/wMAAAAAAAAAAAD3/wMAAAAAAAAAAAD4/wMAAAAAAAAAAAD5/wMAAAAAAAAAAAD6/wMAAAAAAAAAAAD7/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD+/wMAAAAAAAAAAAD//wMAAAAAAAAAAAAAAAMAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAGAAMAAAAAAAAAAAAHAAMAAAAAAAAAAAAIAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAAKAAMAAAAAAAAAAAALAAMAAAAAAAAAAAAMAAMAAAAAAAAAAAANAAMAAAAAAAAAAAAOAAMAAAAAAAAAAAAPAAMAAAAAAAAAAAAQAAMAAAAAAAAAAAARAAMAAAAAAAAAAAASAAMAAAAAAAAAAAATAAMAAAAAAAAAAAAUAAMAAAAAAAAAAAAVAAMAAAAAAAAAAAAWAAMAAAAAAAAAAAAXAAMAAAAAAAAAAAAYAAMAAAAAAAAAAADo/wQAAAAAAAEAAADo/wUAAAAAAAEAAADp/wQAAAAAAAEAAADp/wUAAAAAAAEAAADq/wQAAAAAAAEAAADq/wUAAAAAAAEAAADr/wQAAAAAAAEAAADr/wUAAAAAAAEAAADs/wQAAAAAAAEAAADs/wUAAAAAAAEAAADt/wQAAAAAAAEAAADt/wUAAAAAAAEAAADu/wQAAAAAAAEAAADu/wUAAAAAAAEAAADv/wQAAAAAAAEAAADv/wUAAAAAAAEAAADw/wQAAAAAAAEAAADw/wUAAAAAAAEAAADx/wQAAAAAAAEAAADx/wUAAAAAAAEAAADy/wQAAAAAAAEAAADy/wUAAAAAAAEAAADz/wQAAAAAAAEAAADz/wUAAAAAAAEAAAD0/wQAAAAAAAEAAAD0/wUAAAAAAAEAAAD1/wQAAAAAAAEAAAD1/wUAAAAAAAEAAAD2/wQAAAAAAAEAAAD2/wUAAAAAAAEAAAD3/wQAAAAAAAEAAAD3/wUAAAAAAAEAAAD4/wQAAAAAAAEAAAD4/wUAAAAAAAEAAAD5/wQAAAAAAAEAAAD5/wUAAAAAAAEAAAD6/wQAAAAAAAEAAAD6/wUAAAAAAAEAAAD7/wQAAAAAAAEAAAD7/wUAAAAAAAEAAAD8/wQAAAAAAAEAAAD8/wUAAAAAAAEAAAD9/wQAAAAAAAEAAAD9/wUAAAAAAAEAAAD+/wQAAAAAAAEAAAD+/wUAAAAAAAEAAAD//wQAAAAAAAEAAAD//wUAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAEAAAACAAQAAAAAAAEAAAACAAUAAAAAAAEAAAADAAQAAAAAAAEAAAADAAUAAAAAAAEAAAAEAAQAAAAAAAEAAAAEAAUAAAAAAAEAAAAFAAQAAAAAAAEAAAAFAAUAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAUAAAAAAAEAAAAHAAQAAAAAAAEAAAAHAAUAAAAAAAEAAAAIAAQAAAAAAAEAAAAIAAUAAAAAAAEAAAAJAAQAAAAAAAEAAAAJAAUAAAAAAAEAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAEAAAALAAQAAAAAAAEAAAALAAUAAAAAAAEAAAAMAAQAAAAAAAEAAAAMAAUAAAAAAAEAAAANAAQAAAAAAAEAAAANAAUAAAAAAAEAAAAOAAQAAAAAAAEAAAAOAAUAAAAAAAEAAAAPAAQAAAAAAAEAAAAPAAUAAAAAAAEAAAAQAAQAAAAAAAEAAAAQAAUAAAAAAAEAAAARAAQAAAAAAAEAAAARAAUAAAAAAAEAAAASAAQAAAAAAAEAAAASAAUAAAAAAAEAAAATAAQAAAAAAAEAAAATAAUAAAAAAAEAAAAUAAQAAAAAAAEAAAAUAAUAAAAAAAEAAAAVAAQAAAAAAAEAAAAVAAUAAAAAAAEAAAAWAAQAAAAAAAEAAAAWAAUAAAAAAAEAAAAXAAQAAAAAAAEAAAAXAAUAAAAAAAEAAAAYAAQAAAAAAAEAAAAYAAUAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_qr1nj")

[node name="mid" type="TileMapLayer" parent="TileMap"]
z_index = 2
use_parent_material = true
tile_map_data = PackedByteArray("AADy/wIAAAADAAMAAADy/wEAAQAEAAIAAADy/wAAAAADAAIAAADy////AAADAAEAAAD8/wIAAAADAAMAAAD8/wEAAQACAAQAAAD8/wAAAAADAAIAAAD8////AAADAAEAAAADAAIAAAADAAMAAAADAAEAAQADAAIAAAADAAAAAAADAAIAAAADAP7/AQAEAAEAAAADAP//AAADAAIAAAADAP3/AAADAAEAAAAQAAIAAAADAAMAAAAQAAEAAQAEAAMAAAAQAAAAAAADAAIAAAAQAP//AAADAAEAAADt/wIAAAADAAMAAADt//7/AAADAAIAAADt////AAADAAIAAADt/wAAAQACAAQAAADt/wEAAAADAAIAAADt//3/AAADAAEAAAD2/wIAAAADAAMAAAD2////AAADAAIAAAD2/wAAAAADAAIAAAD2/wEAAAADAAIAAAD2//7/AAADAAEAAAALAP//AAADAAEAAAALAAIAAAADAAMAAAALAAAAAQAEAAMAAAALAAEAAAADAAIAAADz/wIAAAAAAAMAAAD0/wIAAAACAAMAAAD3/wIAAAAAAAMAAQAAAAIAAAAAAAMAAAAFAAIAAAABAAMAAAAJAAIAAAAAAAMAAQAKAAIAAAABAAMAAAD4/wIAAAAAAAMAAAD5/wIAAAAAAAMAAAD6/wIAAAACAAMAAAD9/wIAAAACAAMAAADx/wIAAAABAAMAAAANAAIAAAADAAAAAAAMAAIAAAAAAAMAAAAOAAIAAAACAAMAAADu/wIAAAAAAAMAAADs/wIAAAABAAMAAADv/wIAAAACAAMAAAASAAIAAAAAAAMAAAARAAIAAAACAAMAAAATAAIAAAABAAMAAAAUAAIAAAAAAAMAAQA=")
tile_set = SubResource("TileSet_qr1nj")

[node name="Button Control" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RedButton" type="TextureButton" parent="Button Control"]
z_index = 1
layout_mode = 0
offset_left = -46.0
offset_top = -16.0
offset_right = 18.0
offset_bottom = 48.0
texture_normal = ExtResource("2_wcjs8")
texture_hover = ExtResource("4_ya1w5")

[node name="PointLight2D" type="PointLight2D" parent="Button Control/RedButton"]
position = Vector2(42, 46)
color = Color(0.75527406, 0.43790266, 0.19990289, 1)
texture = SubResource("GradientTexture2D_qr1nj")

[node name="BlueButton" type="TextureButton" parent="Button Control"]
layout_mode = 0
offset_left = 66.0
offset_top = -16.0
offset_right = 178.0
offset_bottom = 48.0
texture_normal = ExtResource("5_4ty0x")
texture_hover = ExtResource("6_oyaqm")

[node name="PriceLabel" type="Label" parent="Button Control/BlueButton"]
z_index = 1
layout_mode = 0
offset_left = 68.0
offset_top = 26.0
offset_right = 108.0
offset_bottom = 42.0
text = "10"

[node name="Silhouette" type="Sprite2D" parent="Button Control/BlueButton"]
position = Vector2(56, 32)
texture = ExtResource("11_4ytee")

[node name="LockIcon" type="Sprite2D" parent="Button Control/BlueButton"]
z_index = 1
position = Vector2(77, 48)
texture = ExtResource("12_jit1l")
region_enabled = true
region_rect = Rect2(0, 0, 35, 32)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button Control/BlueButton/LockIcon"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_i1nck")
}

[node name="lights" type="Node2D" parent="Button Control/BlueButton"]
visible = false

[node name="L" type="PointLight2D" parent="Button Control/BlueButton/lights"]
position = Vector2(75, 37)
color = Color(0.89041555, 0.61806047, 0.4183951, 1)
energy = 0.2
texture = SubResource("GradientTexture2D_g0qae")

[node name="L2" type="PointLight2D" parent="Button Control/BlueButton/lights"]
position = Vector2(61, 50)
color = Color(0.6313726, 1, 1, 1)
energy = 0.2
texture = SubResource("GradientTexture2D_g0qae")

[node name="L3" type="PointLight2D" parent="Button Control/BlueButton/lights"]
position = Vector2(90, 51)
color = Color(0.6313726, 1, 1, 1)
energy = 0.2
texture = SubResource("GradientTexture2D_g0qae")

[node name="L4" type="PointLight2D" parent="Button Control/BlueButton/lights"]
position = Vector2(35, 58)
color = Color(0.6313726, 1, 1, 1)
energy = 0.25
texture = SubResource("GradientTexture2D_g0qae")

[node name="YellowButton" type="TextureButton" parent="Button Control"]
layout_mode = 0
offset_left = -160.0
offset_top = -32.0
offset_right = -80.0
offset_bottom = 96.0
texture_normal = ExtResource("7_oyaqm")
texture_hover = ExtResource("8_g0qae")

[node name="Silhouette" type="Sprite2D" parent="Button Control/YellowButton"]
position = Vector2(40, 40)
texture = ExtResource("13_vpf27")

[node name="LockIcon" type="Sprite2D" parent="Button Control/YellowButton"]
z_index = 1
position = Vector2(41, 58)
texture = ExtResource("12_jit1l")
region_enabled = true
region_rect = Rect2(0, 0, 34, 32)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button Control/YellowButton/LockIcon"]
libraries = {
&"": SubResource("AnimationLibrary_4w658")
}

[node name="PriceLabel" type="Label" parent="Button Control/YellowButton"]
z_index = 1
layout_mode = 0
offset_left = 31.0
offset_top = 35.0
offset_right = 71.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 16
text = "50"

[node name="Lights" type="Node2D" parent="Button Control/YellowButton"]
visible = false

[node name="L" type="PointLight2D" parent="Button Control/YellowButton/Lights"]
position = Vector2(40, 31)
color = Color(0.6117647, 0.54509807, 0.85882354, 1)
energy = 0.5
texture = SubResource("GradientTexture2D_fr1gt")

[node name="L2" type="PointLight2D" parent="Button Control/YellowButton/Lights"]
position = Vector2(25, 64)
color = Color(0.6117647, 0.54509807, 0.85882354, 1)
energy = 0.5
texture = SubResource("GradientTexture2D_fr1gt")

[node name="L3" type="PointLight2D" parent="Button Control/YellowButton/Lights"]
position = Vector2(55, 62)
color = Color(0.6117647, 0.54509807, 0.85882354, 1)
energy = 0.5
texture = SubResource("GradientTexture2D_fr1gt")

[node name="fade_transition" parent="." instance=ExtResource("2_2aiwh")]
offset_left = -5225.0
offset_top = -2530.0
offset_right = 2759.0
offset_bottom = 1844.0

[node name="FadeTimer" type="Timer" parent="fade_transition"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-59, 5)
zoom = Vector2(6, 6)
limit_left = -225
limit_top = -55
limit_right = 225
limit_bottom = 75
position_smoothing_enabled = true
position_smoothing_speed = 1.0
script = ExtResource("4_mc8qq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GoBack" type="TextureButton" parent="CanvasLayer"]
offset_left = 840.0
offset_top = 538.0
offset_right = 904.0
offset_bottom = 578.0
scale = Vector2(5, 5)
texture_normal = ExtResource("18_7wif6")
texture_hover = ExtResource("19_pfjci")

[connection signal="pressed" from="Button Control/RedButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button Control/RedButton" to="." method="_on_red_button_pressed"]
[connection signal="pressed" from="Button Control/BlueButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Button Control/BlueButton" to="." method="_on_blue_button_pressed"]
[connection signal="animation_finished" from="Button Control/BlueButton/LockIcon/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Button Control/YellowButton" to="." method="_on_edificio_button_pressed"]
[connection signal="pressed" from="Button Control/YellowButton" to="." method="_on_yellow_button_pressed"]
[connection signal="animation_finished" from="Button Control/YellowButton/LockIcon/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="fade_transition/FadeTimer" to="." method="_on_fade_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/GoBack" to="." method="_on_go_back_pressed"]
